[tool.poetry]
name = "kairos"
version = "0.1.0"
description = ""
authors = ["Ruben Kaiser <ruben@kaiser.fyi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
